# asphalt-mailer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  conda-environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
asphalt/extension/mailer/: __init__.py  interface.py
asphalt/mailer/: api.py  component.py  exc.py  util.py
asphalt/mailer/mailers/: base.py  mock.py  sendmail.py  smtp.py
docs/: api.rst  conf.py  configuration.rst  extending.rst  index.rst  requirements.txt  testing.rst  usage.rst  versionhistory.rst
docs/modules/: api.rst  component.rst  util.rst  utils.rst
docs/modules/mailers/: mock.rst  sendmail.rst  smtp.rst
docs/snippets/: configuration1.py  testing1.py  usage1.py  usage2.py  usage3.py  usage4.py  usage5.py  usage6.py
examples/: attachment.py  simple.py
src/asphalt/mailer/: __init__.py  _api.py  _component.py  api.py  component.py  utils.py
src/asphalt/mailer/mailers/: mock.py  sendmail.py  smtp.py
tests/: test_api.py  test_component.py  test_util.py  test_utils.py
tests/mailers/: conftest.py  server.cert  server.key  test_mock.py  test_sendmail.py  test_smtp.py
