[metadata]
name = asphalt-mailer
description = Mailer component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-mailer
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Communications :: Email
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages =
    asphalt.mailer
    asphalt.mailer.mailers
install_requires =
    asphalt >= 3.0, < 5.0
    aiosmtplib ~= 1.0
    typeguard ~= 2.0

[options.extras_require]
test =
    aiosmtpd
    pytest
    pytest-cov
    pytest-catchlog
    pytest-asyncio >= 0.5.0
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.0.5
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    mailer = asphalt.mailer.component:MailerComponent
asphalt.mailer.mailers =
    mock = asphalt.mailer.mailers.mock:MockMailer
    smtp = asphalt.mailer.mailers.smtp:SMTPMailer
    sendmail = asphalt.mailer.mailers.sendmail:SendmailMailer

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.mailer

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
exclude = .tox,docs
ignore = E251
